lists files correctly and shows file’s contents in detail view.

--- a/Save Notes/Base.lproj/Main_iPhone.storyboard
+++ b/Save Notes/Base.lproj/Main_iPhone.storyboard
@@ -120,7 +120,7 @@
         <!--Save Notes Detail View Controller - Detail-->
         <scene sceneID="Cn3-H9-jdl">
             <objects>
-                <viewController title="Detail" id="Ah7-4n-0Wa" customClass="SaveNotesDetailViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Detail" title="Detail" id="Ah7-4n-0Wa" customClass="SaveNotesDetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="cIm-e0-J51"/>
                         <viewControllerLayoutGuide type="bottom" id="a0L-h9-sNL"/>
