--- a/Save Notes/Base.lproj/Main_iPhone.storyboard
+++ b/Save Notes/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="82m-sq-CU9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="82m-sq-CU9">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Tab Bar Controller-->
@@ -21,9 +22,9 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kvf-YN-fkL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-855" y="422"/>
+            <point key="canvasLocation" x="-1603.125" y="445.77464788732391"/>
         </scene>
-        <!--Settings View Controller - Settings-->
+        <!--Settings-->
         <scene sceneID="ZlA-XH-Qcj">
             <objects>
                 <viewController id="ZNI-CL-wNp" customClass="SettingsViewController" sceneMemberID="viewController">
@@ -32,12 +33,11 @@
                         <viewControllerLayoutGuide type="bottom" id="qq5-Bl-MD8"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="DUA-1H-tSY">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Dq-5d-oUX">
-                                <rect key="frame" x="55" y="197" width="211" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Dq-5d-oUX">
+                                <rect key="frame" x="223" y="191" width="154" height="30"/>
                                 <state key="normal" title="Link Dropbox Account">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -45,41 +45,44 @@
                                     <action selector="didTouchLink:" destination="ZNI-CL-wNp" eventType="touchUpInside" id="T8A-n8-t8e"/>
                                 </connections>
                             </button>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="14" minValue="8" maxValue="36" translatesAutoresizingMaskIntoConstraints="NO" id="xpC-nB-MMq">
-                                <rect key="frame" x="28" y="393" width="265" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <action selector="sliderValueChanged:" destination="ZNI-CL-wNp" eventType="valueChanged" id="J1P-CU-l4t"/>
-                                </connections>
-                            </slider>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Note text size:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Jy-GC-qiB">
-                                <rect key="frame" x="91" y="364" width="120" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note text size: 14" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Jy-GC-qiB">
+                                <rect key="frame" x="233" y="337" width="134" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="14" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zyg-56-rCc">
-                                <rect key="frame" x="203" y="364" width="24" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="14" minValue="8" maxValue="36" translatesAutoresizingMaskIntoConstraints="NO" id="xpC-nB-MMq">
+                                <rect key="frame" x="168" y="383" width="265" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="261" id="TQP-gR-LNm"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="sliderValueChanged:" destination="ZNI-CL-wNp" eventType="valueChanged" id="J1P-CU-l4t"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9Jy-GC-qiB" firstAttribute="bottom" secondItem="qq5-Bl-MD8" secondAttribute="top" multiplier="0.65" id="48p-NT-ISR"/>
+                            <constraint firstAttribute="centerX" secondItem="9Jy-GC-qiB" secondAttribute="centerX" id="6MW-f2-rul"/>
+                            <constraint firstItem="4Dq-5d-oUX" firstAttribute="bottom" secondItem="qq5-Bl-MD8" secondAttribute="top" multiplier="0.4" id="H7H-wO-mRq"/>
+                            <constraint firstAttribute="centerX" secondItem="4Dq-5d-oUX" secondAttribute="centerX" id="cTc-hP-j0e"/>
+                            <constraint firstItem="xpC-nB-MMq" firstAttribute="bottom" secondItem="qq5-Bl-MD8" secondAttribute="top" multiplier="0.75" id="dO5-W8-IdM"/>
+                            <constraint firstAttribute="centerX" secondItem="xpC-nB-MMq" secondAttribute="centerX" id="xki-mx-Cot"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" image="settings" id="BPm-9f-Np5"/>
                     <connections>
                         <outlet property="linkButton" destination="4Dq-5d-oUX" id="EFt-xy-KBf"/>
-                        <outlet property="textSizeLabel" destination="Zyg-56-rCc" id="AMn-MH-E3i"/>
+                        <outlet property="textSizeLabel" destination="9Jy-GC-qiB" id="sC2-Pb-d4x"/>
                         <outlet property="textSizeSlider" destination="xpC-nB-MMq" id="W9o-Ex-i7n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DtQ-jV-dAv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-321" y="748"/>
+            <point key="canvasLocation" x="-602" y="806"/>
         </scene>
-        <!--Navigation Controller - Notes-->
+        <!--Notes-->
         <scene sceneID="cUi-kZ-frf">
             <objects>
                 <navigationController id="rS3-R9-Ivy" sceneMemberID="viewController">
@@ -94,22 +97,22 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eq9-QA-ai8" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-321" y="70"/>
+            <point key="canvasLocation" x="-601.875" y="73.943661971830977"/>
         </scene>
-        <!--Save Notes Master View Controller - Master-->
+        <!--Master-->
         <scene sceneID="VgW-fR-Quf">
             <objects>
                 <tableViewController title="Master" id="pGg-6v-bdr" customClass="SaveNotesMasterViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="mLL-gJ-YKr">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search notes" id="AOf-lN-r83">
-                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="6Tr-bM-DiM">
+                            <rect key="frame" x="0.0" y="64" width="600" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
                             <connections>
-                                <outlet property="delegate" destination="pGg-6v-bdr" id="Tfp-ze-3Mh"/>
+                                <outlet property="delegate" destination="pGg-6v-bdr" id="SCc-6H-kTa"/>
                             </connections>
                         </searchBar>
                         <prototypes>
@@ -131,7 +134,7 @@
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
-                                    <segue destination="Ah7-4n-0Wa" kind="push" identifier="showDetail" id="jUr-3t-vfg"/>
+                                    <segue destination="Ah7-4n-0Wa" kind="show" identifier="showDetail" id="jUr-3t-vfg"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -146,23 +149,23 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
                     <connections>
-                        <outlet property="searchDisplayController" destination="KUX-sq-eAc" id="FCg-OT-ckJ"/>
+                        <outlet property="searchDisplayController" destination="1Ao-r2-KDI" id="zaN-J2-Wl8"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Cn-md-YlS" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="KUX-sq-eAc">
+                <searchDisplayController id="1Ao-r2-KDI">
                     <connections>
-                        <outlet property="delegate" destination="pGg-6v-bdr" id="3XX-t4-JCt"/>
-                        <outlet property="searchBar" destination="AOf-lN-r83" id="qFr-vP-czB"/>
-                        <outlet property="searchContentsController" destination="pGg-6v-bdr" id="JQJ-WZ-2FD"/>
-                        <outlet property="searchResultsDataSource" destination="pGg-6v-bdr" id="Nak-8w-2cp"/>
-                        <outlet property="searchResultsDelegate" destination="pGg-6v-bdr" id="tKF-f7-9B5"/>
+                        <outlet property="delegate" destination="pGg-6v-bdr" id="xqt-vx-s8e"/>
+                        <outlet property="searchBar" destination="6Tr-bM-DiM" id="ycs-Q4-5mw"/>
+                        <outlet property="searchContentsController" destination="pGg-6v-bdr" id="HjP-pJ-ncP"/>
+                        <outlet property="searchResultsDataSource" destination="pGg-6v-bdr" id="dAt-CP-9Fm"/>
+                        <outlet property="searchResultsDelegate" destination="pGg-6v-bdr" id="JNn-uS-20B"/>
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="203" y="64"/>
+            <point key="canvasLocation" x="380.625" y="67.605633802816897"/>
         </scene>
-        <!--Save Notes Detail View Controller - Detail-->
+        <!--Detail-->
         <scene sceneID="Cn3-H9-jdl">
             <objects>
                 <viewController storyboardIdentifier="Detail" title="Detail" id="Ah7-4n-0Wa" customClass="SaveNotesDetailViewController" sceneMemberID="viewController">
@@ -171,12 +174,11 @@
                         <viewControllerLayoutGuide type="bottom" id="a0L-h9-sNL"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="MMQ-IT-qOo">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iZ5-3M-z4z">
-                                <rect key="frame" x="0.0" y="65" width="320" height="453"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -185,10 +187,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="iZ5-3M-z4z" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" id="btF-zh-1VI"/>
-                            <constraint firstItem="a0L-h9-sNL" firstAttribute="top" secondItem="iZ5-3M-z4z" secondAttribute="bottom" constant="1" id="iTK-ud-0PH"/>
-                            <constraint firstAttribute="trailing" secondItem="iZ5-3M-z4z" secondAttribute="trailing" id="kqP-bt-lBg"/>
-                            <constraint firstItem="iZ5-3M-z4z" firstAttribute="top" secondItem="cIm-e0-J51" secondAttribute="bottom" constant="1" id="xq6-kn-Ygz"/>
+                            <constraint firstItem="iZ5-3M-z4z" firstAttribute="top" secondItem="cIm-e0-J51" secondAttribute="bottom" id="2Oh-gx-3sU"/>
+                            <constraint firstItem="iZ5-3M-z4z" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" id="ph8-XL-RMv"/>
+                            <constraint firstItem="iZ5-3M-z4z" firstAttribute="bottom" secondItem="a0L-h9-sNL" secondAttribute="top" id="xAD-fc-TKb"/>
+                            <constraint firstAttribute="trailing" secondItem="iZ5-3M-z4z" secondAttribute="trailing" id="xWq-io-rFQ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Note Title" id="cra-N8-TIN"/>
@@ -198,16 +200,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lrm-kH-fPn" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="692" y="64"/>
+            <point key="canvasLocation" x="1297.5" y="67.605633802816897"/>
         </scene>
     </scenes>
     <resources>
         <image name="home" width="26" height="26"/>
         <image name="settings" width="26" height="26"/>
     </resources>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
